# term-timer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: kwalitee.yml  release.yml
docs/: demo.webm  detail.tape  graph.tape  list.tape  solve.tape  stats.tape
term-timer/scripts/: timer.py
term_timer/: aggregator.py  argparser.py  arguments.py  cfop.py  colors.py  config.py  console.py  constants.py  exporters.py  formatter.py  importers.py  in_out.py  interface.py  list.py  logger.py  magic_cube.py  manage.py  scrambler.py  server.py  solve.py  stats.py  timer.py  trainer.py  transform.py  triggers.py  twophases.py
term_timer/bluetooth/: constants.py  drivers.py  encrypter.py  facelets.py  interface.py  message.py  salt.py
term_timer/bluetooth/drivers/: base.py  gan.py  gan_gen2.py  gan_gen3.py  gan_gen4.py  moyu.py
term_timer/gl/: camera.py  cube.py  cube_coord.py  data.py  main.py  renderer.py  thread.py  window.py
term_timer/interface/: __init__.py  bluetooth.py  console.py  controler.py  cube.py  gesture.py  getcher.py  inspection.py  scrambler.py  state.py  stopwatch.py  terminal.py
term_timer/methods/: __init__.py  base.py  cfop.py  lbl.py  oll.json  pll.json  raw.py
term_timer/methods/cases/: af2l.json  f2l.json  oll.json  pll.json
term_timer/opengl/: camera.py  cube.py  data.py  main.py  renderer.py  thread.py  window.py
term_timer/scripts/: bluetooth_info.py  bluetooth_scanner.py  cs_timer.py  cstimer.py  cubeast.py  timer.py
term_timer/server/: app.py
term_timer/server/static/css/: style.css
term_timer/server/templates/: 404.html  500.html  index.html  session.html  skeleton.html  solve.html
term_timer/server/templates/macros/: step.html
term_timer/static/css/: style.css
term_timer/templates/: export.html  index.html  session.html  skeleton.html  solve.html
term_timer/tests/: test_aggregator.py  test_arguments.py  test_bluetooth_message.py  test_formatter.py  test_in_out.py  test_list.py  test_magic_cube.py  test_scrambler.py  test_solve.py  test_solve_03.py  test_solve_38.py  test_solve_54.py  test_stats.py  test_timer.py  test_trainer.py  test_transform.py  test_triggers.py
term_timer/tests/scripts/: test_cs_timer.py  test_script_timer.py
