[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "term-timer"
version = "1.0"
description = "Speed Cubing Timer on your Terminal"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "magiccube",
    "rich",
    "RubikTwoPhase",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]
two-phase = [
    "RubikTwoPhase",
]


[project.scripts]
term-timer = "term_timer.scripts.timer:main"
cs_timer_import = "term_timer.scripts.cs_timer:import_csv"

[tool.setuptools]
packages = ["term_timer"]

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py312"
show-fixes = true

[tool.ruff.lint]
preview = true
fixable = ["ALL"]
select = [
       "A",
       "ARG",
       "B",
       "BLE",
       "C4",
       #"C90",
       "COM",
       #"D",
       "DJ",
       "DTZ",
       "E",
       "EM",
       "ERA",
       "EXE",
       "F",
       "FBT",
       "FIX",
       "FLY",
       "FURB",
       "G",
       "I",
       "ICN",
       "INP",
       "INT",
       "ISC",
       "LOG",
       "N",
       "PIE",
       "PL",
       "PTH",
       "Q",
       "RET",
       "RSE",
       "RUF",
       "S",
       "SIM",
       "SLF",
       "T10",
       "T20",
       "TD",
       "TRY",
       "UP",
       "W",
]
ignore = [
       "S311",
       "TD003",
       "T201",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"term_timer.colors.Color" = "C"

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pylint]
allow-magic-value-types = ["str", "int"]

[tool.mypy]
disable_error_code = ["import-untyped"]
exclude = ["tests"]
python_version = 3.12
