[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "term-timer"
version = "1.0"
description = "Speed Cubing Timer on your Terminal"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "magiccube==0.3.0",
    "plotext==5.3.2",
    "rich==13.9.4",
    "bleak==0.22.3",
    "cryptography==44.0.2",
    "cubing_algs @ git+https://github.com/Fantomas42/cubing-algs.git",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "RubikTwoPhase",
]
two-phase = [
    "RubikTwoPhase",
]


[project.scripts]
bc-info = "term_timer.scripts.bluetooth_info:main"
term-timer = "term_timer.scripts.timer:main"
cstimer_import = "term_timer.scripts.cstimer:main"
cubeast_import = "term_timer.scripts.cubeast:main"

[tool.setuptools]
packages = ["term_timer"]

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py312"
show-fixes = true

[tool.ruff.lint]
preview = true
fixable = ["ALL"]
select = [
       "A",
       "ARG",
       "B",
       "BLE",
       "C4",
       #"C90",
       "COM",
       #"D",
       "DJ",
       "DTZ",
       "E",
       "EM",
       "ERA",
       "EXE",
       "F",
       "FBT",
       "FIX",
       "FLY",
       "FURB",
       "G",
       "I",
       "ICN",
       "INP",
       "INT",
       "ISC",
       "LOG",
       "N",
       "PIE",
       "PL",
       "PTH",
       "Q",
       "RET",
       "RSE",
       "RUF",
       "S",
       "SIM",
       "SLF",
       "T10",
       "T20",
       "TD",
       "TRY",
       "UP",
       "W",
]
ignore = [
       "S311",
       "TD003",
       "T201",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"term_timer.colors.Color" = "C"

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pylint]
allow-magic-value-types = ["str", "int"]

[tool.mypy]
disable_error_code = ["import-untyped"]
exclude = ["tests"]
python_version = 3.12

[tool.pytest.ini_options]
addopts = "--cov=term_timer"

[tool.coverage.run]
branch = true
omit = ["term_timer/tests/*"]

[tool.coverage.report]
show_missing = true
